fix overflow

--- a/packages/components/src/TitleBlock/subcomponents/MainActions.module.scss
+++ b/packages/components/src/TitleBlock/subcomponents/MainActions.module.scss
@@ -26,7 +26,8 @@
         padding-left: 2.5rem;
       }
 
-      @media (max-width: 360px) {
+      // note: this is 415 to prevent overflow of larger buttons
+      @media (max-width: 415px) {
         .defaultActionButton {
           display: none;
           margin-inline-end: 0;
